--- a/design.html
+++ b/design.html
@@ -123,10 +123,11 @@
 		/>
 		<script type="module">
 			import './js/head.js'
+			import './js/component_design.js'
 		</script>
 	</head>
 
-	<body class="chip-home">
+	<body class="chip-design">
 		<nav>
 			<nn-caja padding="1rem">
 				<div class="nav-controls">
@@ -198,12 +199,7 @@
 		</nav>
 
 		<main>
-			<header>
-				<img
-					src="./img/preview.svg"
-					alt="cinematic"
-				/>
-			</header>
+			<chip-design></chip-design>
 		</main>
 	</body>
 </html>
