--- a/index.html
+++ b/index.html
@@ -17,64 +17,64 @@
 		<!-- Project Description -->
 		<meta
 			name="description"
-			content="Salishan is a keyboard layout supporting Salishan and neighboring Indigenous languages of the Pacific Northwest, featuring dead keys, combining diacritics, and efficient input for glottalized, ejective, and lateral consonants."
+			content="Android tower defense game based on electric circuits and logic chips, evoking the feel of classic 8-bit micro-processors."
 		/>
 
-		<title>Salishan Keyboard</title>
+		<title>ChipDefense: Copper</title>
 
 		<!-- Favicons -->
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="https://salishan.github.io/img/favicon.svg"
+			href="https://chip-defense.github.io/img/favicon.svg"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="256x256"
-			href="https://salishan.github.io/img/favicon_256x256.png"
+			href="https://chip-defense.github.io/img/favicon_256x256.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="128x128"
-			href="https://salishan.github.io/img/favicon_128x128.png"
+			href="https://chip-defense.github.io/img/favicon_128x128.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="64x64"
-			href="https://salishan.github.io/img/favicon_64x64.png"
+			href="https://chip-defense.github.io/img/favicon_64x64.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="48x48"
-			href="https://salishan.github.io/img/favicon_48x48.png"
+			href="https://chip-defense.github.io/img/favicon_48x48.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="https://salishan.github.io/img/favicon_32x32.png"
+			href="https://chip-defense.github.io/img/favicon_32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="24x24"
-			href="https://salishan.github.io/img/favicon_24x24.png"
+			href="https://chip-defense.github.io/img/favicon_24x24.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="https://salishan.github.io/img/favicon_16x16.png"
+			href="https://chip-defense.github.io/img/favicon_16x16.png"
 		/>
 
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="https://salishan.github.io/img/favicon_180x180.png"
+			href="https://chip-defense.github.io/img/favicon_180x180.png"
 		/>
 
 		<meta
@@ -83,25 +83,25 @@
 		/>
 		<meta
 			name="msapplication-TileImage"
-			content="https://salishan.github.io/img/favicon_128x128.png"
+			content="https://chip-defense.github.io/img/favicon_128x128.png"
 		/>
 
 		<!-- Open Graph Metadata -->
 		<meta
 			property="og:title"
-			content="Salishan Languages Keyboard Support"
+			content="ChipDefense: Copper"
 		/>
 		<meta
 			property="og:description"
-			content="A comprehensive keyboard layout for Salishan languages, enabling intuitive typing of glottalized, ejective, tonal, and special characters used across the Pacific Northwest."
+			content="Android tower defense game based on electric circuits and logic chips, evoking the feel of classic 8-bit micro-processors."
 		/>
 		<meta
 			property="og:site_name"
-			content="Salishan Keyboard"
+			content="ChipDefense: Copper"
 		/>
 		<meta
 			property="og:image"
-			content="https://salishan.github.io/img/salishan-preview.webp"
+			content="https://chip-defense.github.io/img/preview.webp"
 		/>
 		<meta
 			property="og:image:type"
@@ -153,7 +153,7 @@
 								href="/"
 								class="logo"
 							>
-								ChipDefense
+								ChipDefense: Copper
 							</a>
 						</li>
 
@@ -165,6 +165,14 @@
 								href="/"
 							>
 								Home
+							</a>
+						</li>
+						<li>
+							<a
+								target="_self"
+								href="design.html"
+							>
+								Design
 							</a>
 						</li>
 						<li>
@@ -183,15 +191,6 @@
 								Changelog
 							</a>
 						</li>
-
-						<li>
-							<a
-								target="_self"
-								href="design.html"
-							>
-								Design
-							</a>
-						</li>
 					</ul>
 				</div>
 			</nn-caja>
@@ -200,10 +199,22 @@
 		<main>
 			<header>
 				<img
-					src="./img/preview.svg"
-					alt="cinematic"
+					src="./img/chip_copper.svg"
+					width="300"
+					alt="chip-defense-copper logo"
 				/>
+
+				<nn-btn
+					href="https://github.com/jmiguelrivas/chip-defense-copper"
+					color="#445ca1"
+					link
+					target="_BLANK"
+				>
+					Get it on Github
+				</nn-btn>
 			</header>
 		</main>
+
+		<chip-footer></chip-footer>
 	</body>
 </html>
