adding and optimizing illustrations

--- a/credits.html
+++ b/credits.html
@@ -208,7 +208,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/ochadenas.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -217,7 +217,7 @@
 								class="description"
 							>
 								<h2>Oliver Chadenas</h2>
-								<p>Original creator of CPU Defense</p>
+								<p>Original creator of Chip Defense</p>
 								<p><small>MIT License</small></p>
 								<div>
 									<nn-btn
@@ -245,7 +245,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/miguel.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -288,7 +288,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/font.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -326,7 +326,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/icon.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -364,7 +364,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/sound.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -391,7 +391,7 @@
 										link
 										target="_BLANK"
 									>
-										Pixel Icon Library
+										button-clicks-beeps-99-sounds
 									</nn-btn>
 								</div>
 							</nn-pilar>
@@ -402,7 +402,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/sound.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -429,7 +429,7 @@
 										link
 										target="_BLANK"
 									>
-										Pixel Icon Library
+										Every Friday (NES Version)
 									</nn-btn>
 								</div>
 							</nn-pilar>
@@ -440,7 +440,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/sound.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -467,7 +467,7 @@
 										link
 										target="_BLANK"
 									>
-										Pixel Icon Library
+										Doog Doog
 									</nn-btn>
 								</div>
 							</nn-pilar>
@@ -478,7 +478,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/icon.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -497,7 +497,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/icon.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -516,7 +516,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/icon.png"
 									width="200"
 								/>
 							</nn-pilar>
@@ -546,7 +546,7 @@
 						<nn-fila break="md">
 							<nn-pilar size="200px">
 								<img
-									src="./img/cpu_gold.svg"
+									src="./img/icon.png"
 									width="200"
 								/>
 							</nn-pilar>
