--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 		<main>
 			<header>
 				<img
-					src="./img/chip_copper.svg"
+					src="./img/chip_copper.png"
 					width="300"
 					alt="chip-defense-copper logo"
 				/>
