adding loading component

--- a/changelog.html
+++ b/changelog.html
@@ -18,6 +18,7 @@
 		/>
 
 		<title>ChipDefense: Copper</title>
+		<script src="./js/component_loading.js"></script>
 
 		<!-- Favicons -->
 		<link
@@ -125,6 +126,8 @@
 	</head>
 
 	<body class="chip-changelog">
+		<chip-loading></chip-loading>
+
 		<nav>
 			<nn-caja padding="1rem">
 				<div class="nav-controls">
