--- a/design.html
+++ b/design.html
@@ -21,6 +21,7 @@
 		/>
 
 		<title>ChipDefense: Copper</title>
+		<script src="./js/component_loading.js"></script>
 
 		<!-- Favicons -->
 		<link
@@ -128,6 +129,8 @@
 	</head>
 
 	<body class="chip-design">
+		<chip-loading></chip-loading>
+
 		<nav>
 			<nn-caja padding="1rem">
 				<div class="nav-controls">
