--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		/>
 
 		<title>ChipDefense: Copper</title>
+		<script src="./js/component_loading.js"></script>
 
 		<!-- Favicons -->
 		<link
@@ -127,6 +128,8 @@
 	</head>
 
 	<body class="chip-home">
+		<chip-loading></chip-loading>
+
 		<nav>
 			<nn-caja padding="1rem">
 				<div class="nav-controls">
